trustfall_core/test_data/tests/parse_errors/filter_with_value_of_just_dollar_sign.ron
TestGraphQLQuery (
    // Purposefully use a string of just '$' to ensure that we handle that.
    schema_name: "numbers",
    query: r#"
{
    Zero {
        value @filter(op: "=", value: ["$"])
    }
}"#,
    arguments: {},
)
